--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landingpage-react-template",
+  "name": "segredosdoemagrecimento",
   "private": true,
   "homepage": ".",
   "dependencies": {
